# open-telemetry-test

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
open_telemetry_test/: app.py  online_anomaly_detection.py  sentry.py
open_telemetry_test/otel_common/: otel_common_collector_config.yaml  otel_predictive.py
open_telemetry_test/prometheus/: predictive_common.py  prometheus_predictive.py  prometheus_predictive.yaml  prometheus_predictive_otel.py  prometheus_read_metrics.py
open_telemetry_test/supabase/: dashboard.py  performance.py
tests/: test_hello.py
